--- a/style.css
+++ b/style.css
@@ -84,7 +84,20 @@ header nav #logo {
 }
 
 .jockey-wrapper {
+  position: relative;
   padding-top: 5em;
+}
+.jockey-wrapper .graph-img {
+  opacity: 0.6;
+  position: absolute;
+  top: 10%;
+  left: 70%;
+}
+.jockey-wrapper .graph2-img {
+  opacity: 0.7;
+  position: absolute;
+  top: 70%;
+  right: 70%;
 }
 .jockey-wrapper .functionality,
 .jockey-wrapper .tip,
