--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,8 @@ h1 {
   font-size: 3rem;
   text-transform: uppercase;
   margin-bottom: 1rem;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5), 0 2px 2px rgba(0, 0, 0, 0.5);
+
   color: #d11f25;
 }
 h3 {
@@ -31,16 +33,21 @@ h3 {
 p {
   color: black;
 }
-.flex {
+.flex-column {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
+.flex-row {
+  display: flex;
+  justify-content: space-around;
+}
 img {
   max-width: 100%;
   display: block;
   border-radius: 5px;
+  border: none;
   &.jockey-img {
     margin: 0 auto;
   }
@@ -82,22 +89,13 @@ header {
 .jockey-wrapper {
   position: relative;
   padding-top: 5em;
-  .graph-img {
-    opacity: 0.6;
-    position: absolute;
-    top: 10%;
-    left: 70%;
-  }
-  .graph2-img {
-    opacity: 0.7;
-    position: absolute;
-    top: 70%;
-    right: 70%;
-  }
   .functionality,
   .tip,
   .score {
     padding-top: 1rem;
+  }
+  .tip {
+    font-weight: 300;
   }
   .functionality {
     button {
@@ -109,13 +107,15 @@ header {
 // SLIDE NAVIGATION
 .slide-navigation {
   width: 80%;
+  .tip-text {
+    width: 350px;
+  }
   .next {
     display: block;
-    margin-left: auto;
+    // margin-left: auto;
     background-color: #ea212e;
     color: #fff;
     cursor: pointer;
-
     transition: all 0.4s ease;
     &:hover {
       background-color: #ffff;
@@ -123,3 +123,5 @@ header {
     }
   }
 }
+
+// FOOTER
