Renamed - images / Added - Vue.js code

--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ p {
 }
 
 img {
-  max-width: 100%;
+  max-width: 80%;
+  margin: 0 auto;
   display: block;
   border-radius: 5px;
   border: none;
