--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,8 @@ p {
   justify-content: space-around;
 }
 img {
-  max-width: 100%;
+  max-width: 80%;
+  margin: 0 auto;
   display: block;
   border-radius: 5px;
   border: none;
