Added - disabled / enabled functionality on point btns

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ button {
   border: 1px solid #ea212e;
   border-radius: 4px;
   padding: 8px 30px;
+  margin-left: 0.5rem;
   background-color: #fff;
   color: #ea212e;
   cursor: pointer;
@@ -105,15 +106,39 @@ header nav #logo {
 .exercise-wrapper .tip {
   font-weight: 300;
 }
-.exercise-wrapper .functionality button {
-  margin-left: 0.5rem;
-}
 .exercise-wrapper .functionality button h2 {
   color: black;
   margin-bottom: 0.4rem;
 }
 .exercise-wrapper .functionality button span {
   font-size: 16px;
+}
+.exercise-wrapper .functionality .point-btn1,
+.exercise-wrapper .functionality .point-btn2,
+.exercise-wrapper .functionality .point-btn3 {
+  font-weight: 700;
+  text-decoration: none;
+  border: 1px solid #ea212e;
+  border-radius: 4px;
+  padding: 8px 30px;
+  margin-left: 0.5rem;
+  background-color: #fff;
+  color: #ea212e;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+.exercise-wrapper .functionality .point-btn1:hover,
+.exercise-wrapper .functionality .point-btn2:hover,
+.exercise-wrapper .functionality .point-btn3:hover {
+  background-color: #ea212e;
+  color: #fff;
+}
+.exercise-wrapper .functionality .point-btn1:disabled,
+.exercise-wrapper .functionality .point-btn2:disabled,
+.exercise-wrapper .functionality .point-btn3:disabled {
+  background-color: #cdcccb;
+  color: #fff;
+  cursor: not-allowed;
 }
 .exercise-wrapper .score-card {
   padding: 24px 0px;
@@ -130,6 +155,11 @@ header nav #logo {
 .exercise-wrapper .next-btn:hover {
   background-color: white;
   color: #ea212e;
+}
+.exercise-wrapper .next-btn:disabled {
+  background-color: #cdcccb;
+  color: #fff;
+  cursor: not-allowed;
 }
 
 footer {
