--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,7 @@ button {
   border: 1px solid #ea212e;
   border-radius: 4px;
   padding: 8px 30px;
+  margin-left: 0.5rem;
   background-color: #fff;
   color: #ea212e;
   cursor: pointer;
@@ -67,7 +68,6 @@ button {
     color: #fff;
   }
 }
-
 // HEADER
 header {
   min-height: 5vh;
@@ -109,7 +109,6 @@ header {
   }
   .functionality {
     button {
-      margin-left: 0.5rem;
       h2 {
         color: black;
         margin-bottom: 0.4rem;
@@ -117,6 +116,31 @@ header {
       span {
         font-size: 16px;
       }
+    }
+    .point-btn1,
+    .point-btn2,
+    .point-btn3 {
+      font-weight: 700;
+      text-decoration: none;
+      border: 1px solid #ea212e;
+      border-radius: 4px;
+      padding: 8px 30px;
+      margin-left: 0.5rem;
+      background-color: #fff;
+      color: #ea212e;
+      cursor: pointer;
+      transition: all 0.4s ease;
+      &:hover {
+        background-color: #ea212e;
+        color: #fff;
+      }
+    }
+    .point-btn1:disabled,
+    .point-btn2:disabled,
+    .point-btn3:disabled {
+      background-color: #cdcccb;
+      color: #fff;
+      cursor: not-allowed;
     }
   }
   .score-card {
@@ -134,6 +158,11 @@ header {
       background-color: #ffff;
       color: #ea212e;
     }
+  }
+  .next-btn:disabled {
+    background-color: #cdcccb;
+    color: #fff;
+    cursor: not-allowed;
   }
 }
 
