--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ p {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .flex-row {
@@ -58,7 +59,8 @@ button {
   border: 1px solid #ea212e;
   border-radius: 4px;
   padding: 8px 30px;
-  margin-left: 0.5rem;
+  margin-left: 10px;
+  margin-bottom: 10px;
   background-color: #fff;
   color: #ea212e;
   cursor: pointer;
@@ -146,17 +148,17 @@ header nav #logo {
 .exercise-wrapper .score-card span {
   color: #d11f25;
 }
-.exercise-wrapper .next-btn {
+.exercise-wrapper .exercise-navigation .exercise-btn {
   background-color: #ea212e;
   color: #fff;
   cursor: pointer;
   transition: all 0.4s ease;
 }
-.exercise-wrapper .next-btn:hover {
+.exercise-wrapper .exercise-navigation .exercise-btn:hover {
   background-color: white;
   color: #ea212e;
 }
-.exercise-wrapper .next-btn:disabled {
+.exercise-wrapper .exercise-navigation .exercise-btn:disabled {
   background-color: #cdcccb;
   color: #fff;
   cursor: not-allowed;
