--- a/style.scss
+++ b/style.scss
@@ -8,11 +8,11 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #171717;
-  // color: #585858;
-  // color: #d11f25;
-  // color: #ea212e;
-  // color: #cdcccb;
-  // color: #02694c;
+  color: #585858;
+  color: #d11f25;
+  color: #ea212e;
+  color: #cdcccb;
+  color: #02694c;
 }
 h1 {
   font-size: 3rem;
@@ -166,6 +166,17 @@ header {
       background-color: #cdcccb;
       color: #fff;
       cursor: not-allowed;
+    }
+    .results-btn {
+      background-color: #02694c;
+      border: 1px solid #02694c;
+      color: #fff;
+      cursor: pointer;
+      transition: all 0.4s ease;
+      &:hover {
+        background-color: #fff;
+        color: #02694c;
+      }
     }
   }
 }
