--- a/style.scss
+++ b/style.scss
@@ -101,6 +101,19 @@ header {
   .score {
     padding-top: 1rem;
   }
+  .copy {
+    .exercise-title {
+      @media (max-width: 520px) {
+        text-align: center;
+        font-size: 40px;
+        padding: 0px 20px;
+      }
+      @media (max-width: 320px) {
+        font-size: 32px;
+        padding: 0px 10px;
+      }
+    }
+  }
   .image {
     .exercice-img {
       margin: 0 auto;
@@ -108,20 +121,15 @@ header {
   }
   .tip {
     font-weight: 300;
+    line-height: 20px;
+    text-align: center;
+    padding: 20px;
+    @media (max-width: 320px) {
+      font-size: 14px;
+    }
   }
   .functionality {
-    button {
-      h2 {
-        color: black;
-        margin-bottom: 0.4rem;
-      }
-      span {
-        font-size: 16px;
-      }
-    }
-    .point-btn1,
-    .point-btn2,
-    .point-btn3 {
+    .point-btn {
       font-weight: 700;
       text-decoration: none;
       border: 1px solid #ea212e;
@@ -135,6 +143,24 @@ header {
       &:hover {
         background-color: #ea212e;
         color: #fff;
+      }
+      @media (max-width: 520px) {
+        padding: 5px 15px;
+      }
+
+      h2 {
+        color: black;
+        margin-bottom: 5px;
+        @media (max-width: 520px) {
+          font-size: 18px;
+          margin-bottom: 2px;
+        }
+      }
+      span {
+        font-size: 16px;
+        @media (max-width: 520px) {
+          font-size: 14px;
+        }
       }
     }
     .point-btn1:disabled,
@@ -152,6 +178,9 @@ header {
     }
   }
   .exercise-navigation {
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
     .exercise-btn {
       background-color: #ea212e;
       color: #fff;
