--- a/style.scss
+++ b/style.scss
@@ -8,11 +8,6 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #171717;
-  color: #585858;
-  color: #d11f25;
-  color: #ea212e;
-  color: #cdcccb;
-  color: #02694c;
 }
 h1 {
   font-size: 3rem;
@@ -99,7 +94,10 @@ header {
   .functionality,
   .tip,
   .score {
-    padding-top: 1rem;
+    padding-top: 16px;
+    @media (max-width: 520px) {
+      padding-top: 10px;
+    }
   }
   .copy {
     .exercise-title {
@@ -147,7 +145,9 @@ header {
       @media (max-width: 520px) {
         padding: 5px 15px;
       }
-
+      @media (max-width: 370px) {
+        padding: 5px 10px;
+      }
       h2 {
         color: black;
         margin-bottom: 5px;
@@ -155,11 +155,17 @@ header {
           font-size: 18px;
           margin-bottom: 2px;
         }
+        @media (max-width: 370px) {
+          font-size: 16px;
+        }
       }
       span {
         font-size: 16px;
         @media (max-width: 520px) {
           font-size: 14px;
+        }
+        @media (max-width: 370px) {
+          font-size: 12px;
         }
       }
     }
