--- a/style.css
+++ b/style.css
@@ -5,15 +5,14 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #171717;
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 48px;
   text-transform: uppercase;
-  margin-bottom: 1rem;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5), 0 2px 2px rgba(0, 0, 0, 0.5);
+  margin-bottom: 16px;
   color: #d11f25;
 }
 
@@ -25,10 +24,6 @@ h3 {
 h3span {
   font-size: 36px;
   color: #ea212e;
-}
-
-p {
-  color: black;
 }
 
 .flex-column {
@@ -129,7 +124,6 @@ header nav #logo {
   font-weight: 300;
   line-height: 20px;
   text-align: center;
-  padding: 20px;
 }
 @media (max-width: 320px) {
   .exercise-wrapper .tip {
