Removed - 'TIP' from text content / Fixed - padding

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 h1 {
+  font-family: "Roboto", sans-serif;
   font-size: 48px;
   text-transform: uppercase;
   margin-bottom: 16px;
@@ -89,8 +90,7 @@ header nav #logo {
 
 .exercise-wrapper {
   position: relative;
-  padding-top: 48px;
-  padding-bottom: 48px;
+  padding: 48px 0px;
 }
 .exercise-wrapper .functionality,
 .exercise-wrapper .tip,
@@ -124,6 +124,7 @@ header nav #logo {
   font-weight: 300;
   line-height: 20px;
   text-align: center;
+  max-width: 700px;
 }
 @media (max-width: 320px) {
   .exercise-wrapper .tip {
@@ -136,7 +137,7 @@ header nav #logo {
   border: 1px solid #ea212e;
   border-radius: 4px;
   padding: 8px 30px;
-  margin-left: 0.5rem;
+  margin-left: 8px;
   background-color: #fff;
   color: #ea212e;
   cursor: pointer;
@@ -192,7 +193,8 @@ header nav #logo {
   cursor: not-allowed;
 }
 .exercise-wrapper .score-card {
-  padding: 24px 0px;
+  padding-bottom: 20px;
+  padding-top: 10px;
 }
 .exercise-wrapper .score-card span {
   color: #d11f25;
