--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,9 @@ h3 {
     font-size: 36px;
     color: #ea212e;
   }
+  @media (max-width: 320px) {
+    font-size: 32px;
+  }
 }
 .flex-column {
   display: flex;
@@ -84,7 +87,6 @@ header {
 
 // EXERCISE WRAPPER SECTION
 .exercise-wrapper {
-  position: relative;
   padding: 48px 0px;
   .functionality,
   .tip,
@@ -113,9 +115,12 @@ header {
     }
   }
   .tip {
+    font-family: "Roboto", sans-serif;
     font-weight: 300;
     line-height: 20px;
     text-align: center;
+    padding: 10px 30px;
+    padding-bottom: 0px;
     max-width: 700px;
     @media (max-width: 320px) {
       font-size: 14px;
@@ -175,7 +180,6 @@ header {
   .score-card {
     padding-bottom: 20px;
     padding-top: 10px;
-
     span {
       color: #d11f25;
     }
