--- a/style.scss
+++ b/style.scss
@@ -74,13 +74,22 @@ header {
     justify-content: space-between;
     .logo-link {
       border: none;
+      @media (max-width: 520px) {
+        margin: 0 auto;
+      }
       &:hover {
         background-color: transparent;
       }
     }
     #logo {
+      max-width: 100%;
       width: 150px;
       object-fit: contain;
+    }
+    .contact-btn {
+      @media (max-width: 520px) {
+        display: none;
+      }
     }
   }
 }
@@ -231,6 +240,9 @@ footer {
         list-style: none;
         margin-right: 10px;
         transition: all 0.4s ease;
+        @media (max-width: 410px) {
+          margin-right: 0px;
+        }
         &:hover {
           transform: translateY(-5px);
         }
@@ -239,6 +251,9 @@ footer {
           background-color: transparent;
           img {
             width: 35px;
+            @media (max-width: 410px) {
+              width: 25px;
+            }
           }
         }
       }
@@ -248,6 +263,9 @@ footer {
         font-size: 14px;
         text-align: center;
         line-height: 35px;
+        @media (max-width: 410px) {
+          line-height: 25px;
+        }
       }
     }
   }
