--- a/style.scss
+++ b/style.scss
@@ -97,6 +97,7 @@ header {
 // EXERCISE WRAPPER SECTION
 .exercise-wrapper {
   padding: 48px 0px;
+  min-height: 80vh;
   .functionality,
   .tip,
   .score {
