--- a/style.scss
+++ b/style.scss
@@ -262,10 +262,11 @@ footer {
     .copy {
       p {
         font-size: 14px;
+        line-height: 28px;
         text-align: center;
-        line-height: 35px;
-        @media (max-width: 410px) {
+        @media (max-width: 768px) {
           line-height: 25px;
+          margin-bottom: 5px;
         }
       }
     }
