--- a/style.css
+++ b/style.css
@@ -53,26 +53,6 @@ img {
   border: none;
 }
 
-a,
-button {
-  font-weight: 700;
-  text-decoration: none;
-  border: 1px solid #ea212e;
-  border-radius: 4px;
-  padding: 8px 30px;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  background-color: #fff;
-  color: #ea212e;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-a:hover,
-button:hover {
-  background-color: #ea212e;
-  color: #fff;
-}
-
 header {
   min-height: 5vh;
   border-bottom: 2px solid #d11f25;
@@ -98,6 +78,23 @@ header nav #logo {
   width: 150px;
   object-fit: contain;
 }
+header nav .contact-btn {
+  font-weight: 700;
+  text-decoration: none;
+  border: 1px solid #ea212e;
+  border-radius: 4px;
+  padding: 8px 30px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  background-color: #fff;
+  color: #ea212e;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+header nav .contact-btn:hover {
+  background-color: #ea212e;
+  color: #fff;
+}
 @media (max-width: 520px) {
   header nav .contact-btn {
     display: none;
@@ -107,6 +104,11 @@ header nav #logo {
 .exercise-wrapper {
   padding: 48px 0px;
   min-height: 80vh;
+}
+@media (max-width: 320px) {
+  .exercise-wrapper {
+    padding: 32px 0px;
+  }
 }
 .exercise-wrapper .functionality,
 .exercise-wrapper .tip,
@@ -204,6 +206,9 @@ header nav #logo {
     font-size: 12px;
   }
 }
+.exercise-wrapper .functionality .point-btn.point-btn1 {
+  margin-left: 0px;
+}
 .exercise-wrapper .functionality .point-btn1:disabled,
 .exercise-wrapper .functionality .point-btn2:disabled,
 .exercise-wrapper .functionality .point-btn3:disabled {
@@ -224,6 +229,14 @@ header nav #logo {
   }
 }
 .exercise-wrapper .exercise-navigation .exercise-btn {
+  font-weight: 700;
+  font-size: 14px;
+  text-decoration: none;
+  border: 1px solid #ea212e;
+  border-radius: 4px;
+  padding: 8px 30px;
+  margin-left: 10px;
+  margin-bottom: 10px;
   background-color: #ea212e;
   color: #fff;
   cursor: pointer;
@@ -252,36 +265,16 @@ header nav #logo {
 
 footer {
   background-color: #cdcccb;
-  padding: 48px;
+  padding: 48px 0px;
+}
+@media (max-width: 320px) {
+  footer {
+    padding: 32px 0px;
+  }
 }
 footer .footer-wrapper img {
   width: 150px;
   object-fit: contain;
-}
-footer .footer-wrapper ul li {
-  list-style: none;
-  margin-right: 10px;
-  transition: all 0.4s ease;
-}
-@media (max-width: 410px) {
-  footer .footer-wrapper ul li {
-    margin-right: 0px;
-  }
-}
-footer .footer-wrapper ul li:hover {
-  transform: translateY(-5px);
-}
-footer .footer-wrapper ul li a {
-  border: none;
-  background-color: transparent;
-}
-footer .footer-wrapper ul li a img {
-  width: 35px;
-}
-@media (max-width: 410px) {
-  footer .footer-wrapper ul li a img {
-    width: 25px;
-  }
 }
 footer .footer-wrapper .copy p {
   font-size: 14px;
@@ -293,4 +286,17 @@ footer .footer-wrapper .copy p {
     line-height: 25px;
     margin-bottom: 5px;
   }
+}
+footer .footer-wrapper .social {
+  padding: 20px 0px;
+}
+footer .footer-wrapper .social a {
+  transition: all 0.4s ease;
+}
+footer .footer-wrapper .social a:hover {
+  transform: translateY(-5px);
+}
+footer .footer-wrapper .social a img {
+  width: 35px;
+  height: auto;
 }/*# sourceMappingURL=style.css.map */
